Fix issue with subscribe box being behind form elements

--- a/app/assets/stylesheets/application/subscribe.sass
+++ b/app/assets/stylesheets/application/subscribe.sass
@@ -11,6 +11,7 @@
     bottom: -258px
     right: 10px
     transition: 0.2s
+    z-index: 99999
 
     &.visible
       bottom: 10px
